--- a/static/css/green-scheme.css
+++ b/static/css/green-scheme.css
@@ -1286,6 +1286,7 @@ blockquote {
   padding: 100px 0;
   color: #ecf0f1;
   font-family: "Raleway", sans-serif;
+  width: 100vw;
 }
 
 .footer-menu li {
