--- a/templates/bases/base.html
+++ b/templates/bases/base.html
@@ -140,8 +140,12 @@
     margin-top:150px;
     margin-bottom:100px;
   }
+  .col-6 {
+      margin-bottom: 100px;
+      margin-top: 50px;
+  }
 </style>
-  <footer class="site-footer">
+  <footer class="site-footer" style="width: 100vw;">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
