--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -1,111 +1,8 @@
-<!DOCTYPE html>
-<html lang="en-US">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	<title>Medigo Green Portfolio</title>
-    <meta name="keywords" content="">
-	<meta name="description" content="">
-    <meta name="author" content="templatemo">
-    <!-- 
-	Medigo Template
-	http://www.templatemo.com/preview/templatemo_460_medigo
-    -->
+{% extends 'bases/base.html' %}
 
-	<!-- Google Fonts -->
-	<link href="http://fonts.googleapis.com/css?family=PT+Serif:400,700,400italic,700itali" rel="stylesheet">
-	<link href="http://fonts.googleapis.com/css?family=Raleway:400,900,800,700,500,200,100,600" rel="stylesheet">
+{% load static %}
 
-	<!-- Stylesheets -->
-	<link rel="stylesheet" href="bootstrap/bootstrap.css">
-	<link rel="stylesheet" href="css/misc.css">
-	<link rel="stylesheet" href="css/green-scheme.css">
-	
-	<!-- JavaScripts -->
-	<script src="js/jquery-1.10.2.min.js"></script>
-	<script src="js/jquery-migrate-1.2.1.min.js"></script>
-
-	<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
-
-</head>
-<body>
-
-
-	<div class="responsive_menu">
-        <ul class="main_menu">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="#">Portfolio</a>
-            	<ul>
-            		<li><a href="portfolio.html">Portfolio Grid</a></li>
-            		<li><a href="project-image.html">Project Image</a></li>
-            		<li><a href="project-slideshow.html">Project Slideshow</a></li>
-            	</ul>
-            </li>
-            <li><a href="#">Blog</a>
-				<ul>
-					<li><a href="blog.html">Blog Standard</a></li>
-					<li><a href="blog-single.html">Blog Single</a></li>
-                    <li><a href="#">visit templatemo</a></li>
-				</ul>
-            </li>
-            <li><a href="archives.html">Archives</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul> <!-- /.main_menu -->
-    </div> <!-- /.responsive_menu -->
-
-	<header class="site-header clearfix">
-		<div class="container">
-
-			<div class="row">
-
-				<div class="col-md-12">
-
-					<div class="pull-left logo">
-						<a href="index.html">
-							<img src="images/logo.png" alt="Medigo">
-						</a>
-					</div>	<!-- /.logo -->
-
-					<div class="main-navigation pull-right">
-
-						<nav class="main-nav visible-md visible-lg">
-							<ul class="sf-menu">
-								<li><a href="index.html">Home</a></li>
-					            <li class="active"><a href="#">Portfolio</a>
-					            	<ul>
-					            		<li><a href="portfolio.html">Portfolio Grid</a></li>
-					            		<li><a href="project-image.html">Project Image</a></li>
-					            		<li><a href="project-slideshow.html">Project Slideshow</a></li>
-					            	</ul>
-					            </li>
-					            <li><a href="#">Blog</a>
-									<ul>
-										<li><a href="blog.html">Blog Standard</a></li>
-										<li><a href="blog-single.html">Blog Single</a></li>
-                                        <li><a href="#">visit templatemo</a></li>
-									</ul>
-					            </li>
-					            <li><a href="archives.html">Archives</a></li>
-					            <li><a href="contact.html">Contact</a></li>
-							</ul> <!-- /.sf-menu -->
-						</nav> <!-- /.main-nav -->
-
-						<!-- This one in here is responsive menu for tablet and mobiles -->
-					    <div class="responsive-navigation visible-sm visible-xs">
-					        <a href="#nogo" class="menu-toggle-btn">
-					            <i class="fa fa-bars"></i>
-					        </a>
-					    </div> <!-- /responsive_navigation -->
-
-					</div> <!-- /.main-navigation -->
-
-				</div> <!-- /.col-md-12 -->
-
-			</div> <!-- /.row -->
-
-		</div> <!-- /.container -->
-	</header> <!-- /.site-header -->
-
+{% block content %}
 	<div class="first-widget parallax" id="portfolio">
 		<div class="parallax-overlay">
 			<div class="container pageTitle">
@@ -121,7 +18,7 @@
 		</div> <!-- /.parallax-overlay -->
 	</div> <!-- /.pageTitle -->
 
-	<div class="container">	
+	<div class="container">
 		<div class="row">
 			<div class="col-md-12">
 				<ul id="filters" class="mixitup-controls">
@@ -133,7 +30,7 @@
 				</ul>
 			</div> <!-- /.col-md-12 -->
 		</div> <!-- /.row -->
-	</div> <!-- /.container -->	
+	</div> <!-- /.container -->
 
 	<div class="container">
 		<div class="row">
@@ -147,13 +44,13 @@
                                     <h3 class="portfolio-title"><a href="project-slideshow.html">Visual Admin</a></h3>
                                 </div>
                                 <div class="portfolio-expand">
-                                    <a class="fancybox" href="images/includes/project1.jpg" title="Visual Admin">
+                                    <a class="fancybox" href="{% static 'images/includes/project1.jpg' %}" title="Visual Admin">
                                         <i class="fa fa-expand"></i>
                                     </a>
                                 </div>
                             </div>
                         </div>
-                        <img src="images/includes/project1.jpg" alt="Visual Admin">
+                        <img src="{% static 'images/includes/project1.jpg' %}" alt="Visual Admin">
 					</div>
 				</div> <!-- /.col-md-4 -->
 
@@ -166,13 +63,13 @@
                                     <h3 class="portfolio-title"><a href="project-slideshow.html">Compass Template</a></h3>
                                 </div>
                                 <div class="portfolio-expand">
-                                    <a class="fancybox" href="images/includes/project2.jpg" title="Compass Template">
+                                    <a class="fancybox" href="i{% static 'images/includes/project2.jpg'%}" title="Compass Template">
                                         <i class="fa fa-expand"></i>
                                     </a>
                                 </div>
                             </div>
                         </div>
-                        <img src="images/includes/project2.jpg" alt="Compass Template">
+                        <img src="{% static 'images/includes/project2.jpg' %}" alt="Compass Template">
 					</div>
 				</div> <!-- /.col-md-4 -->
 
@@ -185,7 +82,7 @@
                                     <h3 class="portfolio-title"><a href="project-slideshow.html">Awesome Theme</a></h3>
                                 </div>
                                 <div class="portfolio-expand">
-                                    <a class="fancybox" href="images/includes/project3.jpg" title="Awesome Theme">
+                                    <a class="fancybox" href="{% static 'images/includes/project3.jpg' %}" title="Awesome Theme">
                                         <i class="fa fa-expand"></i>
                                     </a>
                                 </div>
@@ -204,13 +101,13 @@
                                     <h3 class="portfolio-title"><a href="project-slideshow.html">Volton Personal Site</a></h3>
                                 </div>
                                 <div class="portfolio-expand">
-                                    <a class="fancybox" href="images/includes/project4.jpg" title="Volton Personal Site">
+                                    <a class="fancybox" href="{% static 'images/includes/project4.jpg' %}" title="Volton Personal Site">
                                         <i class="fa fa-expand"></i>
                                     </a>
                                 </div>
                             </div>
                         </div>
-                        <img src="images/includes/project4.jpg" alt="Volton Personal Site">
+                        <img src="{% static 'images/includes/project4.jpg' %}" alt="Volton Personal Site">
 					</div>
 				</div> <!-- /.col-md-4 -->
 
@@ -223,13 +120,13 @@
                                     <h3 class="portfolio-title"><a href="project-slideshow.html">Rectangle Design</a></h3>
                                 </div>
                                 <div class="portfolio-expand">
-                                    <a class="fancybox" href="images/includes/project5.jpg" title="Rectangle Design">
+                                    <a class="fancybox" href="{% static 'images/includes/project5.jpg' %}" title="Rectangle Design">
                                         <i class="fa fa-expand"></i>
                                     </a>
                                 </div>
                             </div>
                         </div>
-                        <img src="images/includes/project5.jpg" alt="Rectangle Design">
+                        <img src="{% static 'images/includes/project5.jpg" alt="Rectangle Design">
 					</div>
 				</div> <!-- /.col-md-4 -->
 
@@ -242,13 +139,13 @@
                                     <h3 class="portfolio-title"><a href="project-slideshow.html">Masonry Gallery</a></h3>
                                 </div>
                                 <div class="portfolio-expand">
-                                    <a class="fancybox" href="images/includes/project6.jpg" title="Masonry Gallery">
+                                    <a class="fancybox" href="{% static 'images/includes/project6.jpg' %}" title="Masonry Gallery">
                                         <i class="fa fa-expand"></i>
                                     </a>
                                 </div>
                             </div>
                         </div>
-                        <img src="images/includes/project6.jpg" alt="Masonry Gallery">
+                        <img src="{% static 'images/includes/project6.jpg' %}" alt="Masonry Gallery">
 					</div>
 				</div> <!-- /.col-md-4 -->
 
@@ -261,13 +158,13 @@
                                     <h3 class="portfolio-title"><a href="project-slideshow.html">Gloss Template</a></h3>
                                 </div>
                                 <div class="portfolio-expand">
-                                    <a class="fancybox" href="images/includes/project7.jpg" title="Gloss Template">
+                                    <a class="fancybox" href="{% static 'images/includes/project7.jpg' %}" title="Gloss Template">
                                         <i class="fa fa-expand"></i>
                                     </a>
                                 </div>
                             </div>
                         </div>
-                        <img src="images/includes/project7.jpg" alt="Gloss Template">
+                        <img src="{% static 'images/includes/project7.jpg' %}" alt="Gloss Template">
 					</div>
 				</div> <!-- /.col-md-4 -->
 
@@ -280,13 +177,13 @@
                                     <h3 class="portfolio-title"><a href="project-slideshow.html">Ion Template</a></h3>
                                 </div>
                                 <div class="portfolio-expand">
-                                    <a class="fancybox" href="images/includes/project8.jpg" title="Ion Template">
+                                    <a class="fancybox" href="{% static 'images/includes/project8.jpg' %}" title="Ion Template">
                                         <i class="fa fa-expand"></i>
                                     </a>
                                 </div>
                             </div>
                         </div>
-                        <img src="images/includes/project8.jpg" alt="Ion Template">
+                        <img src="{% static 'images/includes/project8.jpg' %}" alt="Ion Template">
 					</div>
 				</div> <!-- /.col-md-4 -->
 
@@ -299,16 +196,16 @@
                                     <h3 class="portfolio-title"><a href="project-slideshow.html">Freshness</a></h3>
                                 </div>
                                 <div class="portfolio-expand">
-                                    <a class="fancybox" href="images/includes/project9.jpg" title="Freshness">
+                                    <a class="fancybox" href="{% static 'images/includes/project9.jpg' %}" title="Freshness">
                                         <i class="fa fa-expand"></i>
                                     </a>
                                 </div>
                             </div>
                         </div>
-                        <img src="images/includes/project9.jpg" alt="Freshness">
+                        <img src="{% static 'images/includes/project9.jpg' %}" alt="Freshness">
 					</div>
 				</div> <!-- /.col-md-4 -->
-				
+
 			</div> <!-- /.portfolio-holder -->
 		</div> <!-- /.row -->
 	</div> <!-- /.container -->
@@ -327,33 +224,5 @@
 		</div> <!-- /.row -->
 	</div> <!-- /.container -->
 
-	<footer class="site-footer">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-12">
-					<nav class="footer-nav clearfix">
-						<ul class="footer-menu">
-							<li><a href="index.html">Home</a></li>
-							<li><a href="portfolio.html">Portfolio</a></li>
-							<li><a href="blog.html">Blog Posts</a></li>
-							<li><a href="archives.html">Shortcodes</a></li>
-							<li><a href="contact.html">Contact</a></li>
-						</ul> <!-- /.footer-menu -->
-					</nav> <!-- /.footer-nav -->
-				</div> <!-- /.col-md-12 -->
-			</div> <!-- /.row -->
-			<div class="row">
-				<div class="col-md-12">
-					<p class="copyright-text">Copyright &copy; 2084 Company Name</p>
-				</div> <!-- /.col-md-12 -->
-			</div> <!-- /.row -->
-		</div> <!-- /.container -->
-	</footer> <!-- /.site-footer -->
 
-	<!-- Scripts -->
-	<script src="js/min/plugins.min.js"></script>
-	<script src="js/min/medigo-custom.min.js"></script>
-
-
-</body>
-</html>
+{% endblock %}
